# django-project-2

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
tasks/: models.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_datecompleted.py
tasks/templates/: base.html  create_task.html  home.html  login.html  signup.html  task.html  task_detail.html
